--- a/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
+++ b/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
@@ -12,5 +12,10 @@
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="pedirDelivery()">Pedir delivery</button>
     <solicitud-mesa [ocupaMesa]="ocupaMesa"></solicitud-mesa>
     <button [disabled]="ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
+    <button [disabled]="!tieneChat" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="Chat()">Chat</button>
+   
+    
+    
     <estado-pedido *ngIf="pedido" [pedido]="pedido"></estado-pedido>
 </ion-content>
+
