--- a/src/pages/pages-delivery-boy/pages-delivery-boy.html
+++ b/src/pages/pages-delivery-boy/pages-delivery-boy.html
@@ -5,7 +5,8 @@
 </ion-header>
 <ion-content padding class="cocineroMenu">
   
-    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="CargarPedidosPendientes()">Ver Pedidos</button> 
+    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="CargarPedidosPendientes()">Ver Pedidos</button>
+    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="Chat()">Chat</button> 
     
     <listapedidos [pedidos]="pedidos"></listapedidos>
      
